--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -8,3 +8,25 @@ main {
 .jumbotron {
     min-height: calc(100vh - 70px);
 }
+
+.main-cover {
+    background-image: url(https://cdn.shopify.com/s/files/1/0605/8934/2979/files/IMG_4412.jpg?v=1636146584&width=1500);
+    width: 100%;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.led-text {
+    color: #fff;
+    text-shadow: 0 0 7px #fff, 0 0 10px #fff, 0 0 21px #fff,
+        0 0 42px rgb(47, 0, 255), 0 0 82px rgb(47, 0, 255),
+        0 0 92px rgb(47, 0, 255), 0 0 102px rgb(47, 0, 255),
+        0 0 151px rgb(47, 0, 255);
+    font-size: 75px;
+
+    border: 0.2rem solid #fff;
+    border-radius: 2rem;
+    padding: 0.4em;
+    box-shadow: 0 0 0.2rem #fff, 0 0 0.2rem #fff, 0 0 2rem #bc13fe,
+        0 0 0.8rem #bc13fe, 0 0 2.8rem #bc13fe, inset 0 0 1.3rem #bc13fe;
+}
